Bug 222388: Set initial SMTP server choice to "Always Use Default SMTP Server" instead of specific SMTP server which is set as "Default" when account definition. r=mnyromyr, sr=neil, a-tb3=standard8